--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,44 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v9.0"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/animal-sniffer-annotations-1.14.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/checker-compat-qual-2.5.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/error_prone_annotations-2.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-android-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-appengine-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-gson-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-jackson2-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-java6-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-protobuf-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-servlet-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-api-client-xml-1.30.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-http-client-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-http-client-android-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-http-client-appengine-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-http-client-gson-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-http-client-jackson2-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-http-client-protobuf-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-http-client-xml-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-oauth-client-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-oauth-client-appengine-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-oauth-client-java6-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/google-oauth-client-servlet-1.30.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/grpc-context-1.19.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/guava-26.0-android.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/httpclient-4.5.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/httpcore-4.4.11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/j2objc-annotations-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/jackson-core-2.9.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/jdo2-api-2.3-eb.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/jsr305-3.0.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/opencensus-api-0.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/opencensus-contrib-http-util-0.21.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/protobuf-java-2.6.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/transaction-api-1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/xpp3-1.1.4c.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
