--- a/.classpath
+++ b/.classpath
@@ -48,5 +48,9 @@
 	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/protobuf-java-2.6.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/transaction-api-1.1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/google-api-java-client/libs/xpp3-1.1.4c.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/calendar/google-api-services-calendar-v3-rev400-1.25.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/calendar/libs/google-http-client-1.25.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/calendar/libs/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/leesanghyeon/Desktop/calendar/libs/google-api-client-1.25.0.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
